Fixes to homepage, modal and z-index`

--- a/src/components/ViewDao/ViewDao.scss
+++ b/src/components/ViewDao/ViewDao.scss
@@ -341,6 +341,7 @@ a.navItem:hover {
   font-size: $jumbo;
   margin-bottom: -8px;
   padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .daoPrefs {
